# ppbl-couse-2

./: .gitignore  .~lock.ppbl-2.odt#  node_query.py  ppbl-2.odt  pycardano-test1.py  readme.md
activitis/: make_preprod_addr.sh
activitis/graphql/: ejemplos_where_order_by.graphql  introspectionSchema.json  schema.graphql
activitis/project-204/: tx.raw  tx.signed
activitis/project-301/: Tx_lock_tokens.raw  Tx_lock_tokens.signed  Tx_send_tokens.raw  Tx_send_tokens.signed  datum_1001.value  faucet-reg-metadata.json  faucetLAND.addr  metadata.raw  metadata.signed  ppbl-faucet-preprod-LAND.plutus  project-301_query.py  redeemer_1001.json  sc_wildraw_tx.raw  sc_wildraw_tx.signed
activitis/project-302/: tx-list.json
activitis/project-303.1/: Variables-sh  bounty.policyID  contributor.policyID  escrow.addr  issuer.policyID  treasury.addr
project-01/: always-succeeds.cabal  cabal.project  config  readme.md
project-02/: readme.md  simple-minter.cabal  simple-plutus-minting-policy.cabal
project-02/docs/: 201-2.md  201-3.md  201-4.md  201-5.md
project-02/native-script/: policy.script
project-02/output/: my-first-minting-script.id  my-first-minting-script.plutus
project-02/transactions/: protocol.json
project-203/: readme-203.md  readme.md  simple-metadata-tx.md
project-203/metadata/: nft.json  simple-metadata.json
project-203/policies/: multi-sig.json  ppbl-nft-2.script  ppbl-nft.json
project-204/: cabal.project  ppbl-summer.cabal
project-301-faucet/: cabal.project  ppbl-faucet.cabal  readme-mainnet.md  readme.md  register-your-faucet.md  sendmanytokens.md
project-301-faucet-plutusV2/: readme.md
project-301-faucet-plutusV2/src/: FaucetValidatorCompiler.hs  FaucetValidatorScript.hs
project-301-faucet/output/: ppbl-faucet.plutus
project-301-faucet/shared-script/: redeemer-example.json  (+3 more)
project-303/: README.md
project-303/Zero One Game/: Game Instruction.md  README.md  cabal.project  zero-one-game.cabal
project-303/Zero One Game/app/: addressInfo.hs  createHashOfAnswer.hs  dataToJSON.hs  posixTimeToSlot.hs  slotToPOSIXTime.hs
project-303/Zero One Game/output/: ZeroOneGame-Datum-jd-zero-zero.json  ZeroOneGame-Datum.json  ZeroOneGame-Redeemer-Play-jd-one-one.json  ZeroOneGame-Redeemer-Play-jd.json  ZeroOneGame.addr  ZeroOneGame.plutus  firstPlayerRevealChoice-REDEEMER.json  secondPlayerClaims-REDEEMER.json  secondPlayerPlayChoice-DATUM.json  secondPlayerPlayChoice-REDEEMER.json  startGame-DATUM.json
project-303/Zero One Game/src/Game/: GameCompiler.hs  GameTypes.hs  ZeroOneGame.hs
project-303/bounty-treasury-escrow/: README.md  bounty-escrow.cabal  cabal.project  minting-contributor-tokens.md  minting-tokens.md  using-preprod-instance.md
project-303/bounty-treasury-escrow/app/: dataToJSON-Hardcoded.hs  dataToJSON-WithArg.hs
project-303/bounty-treasury-escrow/datum-and-redeemers/: BountyEscrowDatumDistributeTemplate.json  BountyEscrowDatumExample01.json  ExampleFERedeemer.json  TreasuryActionExample01.json  TreasuryDatumExample01.json
project-303/bounty-treasury-escrow/output/: BountyEscrowDatum-Hardcoded.json  bounty-treasury.plutus
project-303/bounty-treasury-escrow/output/jd-examples/: bounty-details-1.json  bounty-details-2.json  jd-bounty-escrow.addr  jd-bounty-escrow.plutus  jd-bounty-treasury.addr  jd-bounty-treasury.plutus  treasury-withdrawal-datum-example.json
project-303/bounty-treasury-escrow/scripts/: 00-contrib-preprod-minter.sh  00-preprod-minter.sh  01-issuer-funds-treasury.sh  02-contributor-commits-to-bounty.sh  03-issuer-completes-bounty.sh  03-issuer-distributes-bounty.sh  commitment-tx.draft  commitment-tx.signed  distribute-bounty-tx.draft  distribute-bounty-tx.signed  fund-treasury.draft  fund-treasury.signed  mint-tSergi10.draft  mint-tSergi10.signed  mint-tSergi10ACCESSTOKEN.draft  mint-tSergi10ACCESSTOKEN.signed  mint-tSergi10AsIssuer.draft  mint-tSergi10AsIssuer.signed  split-tx.draft  split-tx.signed  split.sh
project-303/bounty-treasury-escrow/src/Escrow/: BountyTypes.hs  EscrowCompiler.hs
project-303/bounty-treasury-escrow/src/TreasuryAndEscrow/: Compiler.hs  EscrowValidator.hs  TreasuryValidator.hs  Types.hs
project-304/: .gitignore  CHANGELOG.md  README.md  calligraphy-unit-test.cabal  flake.nix  get-test-data.sh
(+156 files in other folders)
