Cabal-Version:       2.4
Name:                zero-one-game
Version:             1.0.0.0
Author:              Gimbalabs
Maintainer:          jdunseith@gimblabs.io
Build-Type:          Simple
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Game.GameCompiler
                       Game.ZeroOneGame
                       Game.GameTypes
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable             dataToJSON
  main-is:             dataToJSON.hs
  hs-source-dirs:      app
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , plutus-tx
                     , plutus-ledger
                     , zero-one-game
  default-language:    Haskell2010
  ghc-options:        -Wall

executable             createHashOfAnswer
  main-is:             createHashOfAnswer.hs
  hs-source-dirs:      app
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , plutus-tx
                     , cardano-api
                     , plutus-tx
                     , plutus-ledger
  default-language:    Haskell2010
  ghc-options:        -Wall
