Cabal-Version:        2.4
Name:                 bounty-escrow
Version:              1.0.0.0
Author:               Gimbalabs
Maintainer:           jdunseith@gimblabs.io
Build-Type:           Simple
License:              Apache-2.0
License-file:         LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     TreasuryAndEscrow.Compiler
                       TreasuryAndEscrow.EscrowValidator
                       TreasuryAndEscrow.TreasuryValidator
                       TreasuryAndEscrow.Types
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable             dataToJSON-WithArg
  main-is:             dataToJSON-WithArg.hs
  hs-source-dirs:      app
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , plutus-ledger
                     , plutus-tx
                     , bounty-escrow
  default-language:    Haskell2010
  ghc-options:        -Wall

executable             dataToJSON-Hardcoded
  main-is:             dataToJSON-Hardcoded.hs
  hs-source-dirs:      app
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , plutus-tx
                     , plutus-ledger
                     , bounty-escrow
  default-language:    Haskell2010
  ghc-options:        -Wall
